--- a/.goplicate.yaml
+++ b/.goplicate.yaml
@@ -5,8 +5,8 @@
 targets:
   - path: .eslintrc.js
     source:
-      repository: https://github.com/ilaif/goplicate
-      path: examples/simple/shared-configs-repo/.eslintrc.js
+      repository: https://github.com/ilaif/goplicate-example-shared-configs
+      path: .eslintrc.js
     params:
       - repository: https://github.com/ilaif/goplicate
-        path: examples/simple/shared-configs-repo/params.yaml
+        path: params.yaml
